devops/vagrant/k8s/dashboard/dashboard-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
  namespace: kubernetes-dashboard
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: kong
  ports:
    - port: 30443
      targetPort: 8443
      nodePort: 30443
